# file-config

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README-PYPI.rst  README.md  README.rst  azure-pipelines.yml  file_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/templates/: build-package.yml  install-dependencies.yml  run-coverage.yml  run-tests.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lint-package.yml  test-package.yml
.pre-commit-hooks/: flake8.sh
changes/: transition-to-poetry.trivial
docs/: requirements.txt
docs/source/: conf.py  file_config.contrib.rst  file_config.handlers.rst  file_config.rst  file_config.schema_builder.rst  file_config.utils.rst  getting-started.rst  handlers.rst  index.rst
file_config/: __info__.py  __init__.py  __version__.py  _file_config.py  constants.py  schema_builder.py  utils.py
file_config/handlers/: __init__.py  _common.py  json.py  message_pack.py  msgpack.py  pickle.py  toml.py  yaml.py
news/: 10.feature  12.feature  15.misc  17.feature  18.bugfix  19.bugfix  20.bugfix  21.bugfix  22.bugfix  24.bugfix  26.bugfix  36.bugfix  38.bugfix  41.feature  8.misc  attrs-kwarg-passthrough.misc  autodocs.doc  codecov.doc  collections-deprecation-warning.misc  copyright-updates.misc  copyright-year-update.misc  fix-import.misc  fix-release.misc  handlers.doc  license-change.misc  loading-defaults.doc  long-description-content-type.misc  private-method-documentation.doc  pypi-badge.misc  schema-builder-docstrings.doc  schema-metadata-documentation.doc  setup-project-urls.trivial  test-handlers.misc  test-logic.misc  typing-stubs.misc  ujson-reflective-tests.misc  updating-stubs.misc  utils-docstrings.doc
src/file_config/: __init__.py  __version__.py  _file_config.py  _file_config_old.py  constants.py  schema_builder.py  serialize.py  types.py  utils.py
src/file_config/contrib/: __init__.py  ini_parser.py  xml_parser.py
src/file_config/handlers/: __init__.py  _common.py  ini.py  json.py  msgpack.py  pickle.py  toml.py  xml.py  yaml.py
stubs/file_config/: __init__.pyi  __version__.pyi  _file_config.pyi  constants.pyi  schema_builder.pyi  utils.pyi
stubs/file_config/contrib/: __init__.pyi  ini_parser.pyi  xml_parser.pyi
stubs/file_config/handlers/: __init__.pyi  _common.pyi  ini.pyi  json.pyi  msgpack.pyi  pickle.pyi  toml.pyi  xml.pyi  yaml.pyi
tasks/: CHANGELOG.rst.jinja2  __init__.py  docs.py  linter.py  package.py  utils.py
tests/: __init__.py  builder.py  strategies.py  test_file_config.py  test_regression.py  test_schema_builder.py  test_utils.py
tests-old/: __init__.py  builder.py  test_file_config.py  test_utils.py
tests-old/handlers/: test_json.py
tests/contrib/: __init__.py  test_ini_parser.py  test_xml_parser.py
tests/handlers/: __init__.py  test_common.py  test_ini.py  test_json.py  test_msgpack.py  test_pickle.py  test_toml.py  test_xml.py  test_yaml.py
