[build-system]
requires = ["setuptools>=36.2.2", "wheel>=0.28.0"]

[tool.towncrier]
  package = "file_config"
  package_dir = "src"
  filename = "CHANGELOG.rst"
  directory = "news/"
  title_format = "`{version} <https://github.com/stephen-bunn/file-config/releases/tag/v{version}>`_ (*{project_date}*)"
  issue_format = '`#{issue} <https://github.com/stephen-bunn/file-config/issues/{issue}>`_'
  template = 'tasks/CHANGELOG.rst.jinja2'

  [[tool.towncrier.type]]
  directory = 'feature'
  name = 'Features'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'bugfix'
  name = 'Bug Fixes'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'doc'
  name = 'Documentation'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'trivial'
  name = 'Trivial Changes'
  showcontent = false

  [[tool.towncrier.type]]
  directory = 'misc'
  name = 'Miscellaneous'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'removal'
  name = 'Removals and Deprecations'
  showcontent = true
