[metadata]
name = file-config
package_name = file_config
version = 0.3.7
description = An attrs based configuration file abstraction
url = https://github.com/stephen-bunn/file-config
author = Stephen Bunn
author_email = stephen@bunn.io
long_description = file: README.rst
license = ISC License
keywords =
    config
    file
    toml
    json
    yaml
    msgpack
    pickle
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: ISC License (ISCL)
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules

[options.extras_require]
test =
    isort
    flake8
    pytest<=3.9.3
    pytest-flake8
    pytest-sugar
    pytest-xdist
    pytest-cov
    hypothesis
    codacy-coverage
    coverage<=4.5.1
    readme_renderer
    check-manifest
    python-rapidjson
    toml
    tomlkit
    pytoml
    pyyaml
    msgpack
    lxml
    defusedxml
docs =
    sphinx
lxml =
    lxml
    defusedxml
toml = toml
tomlkit = tomlkit
pytoml = pytoml
ujson = ujson
pyyaml = pyyaml
msgpack = msgpack
python-rapidjson = python-rapidjson

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=36.2.2
install_requires =
    attrs
    jsonschema

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -rxsX --flake8 -n 4 --cov
norecursedirs = .git _build dist news tasks docs
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 88
ignore = D203,F401,E123,W503,E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13
import-order-style = google
application-import-names = flake8

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = 1
known_first_party = file_config
include_trailing_comma = true
